few hyprland additions

--- a/configs/laptop/hypr/hyprland.conf
+++ b/configs/laptop/hypr/hyprland.conf
@@ -8,13 +8,15 @@ workspace=DP-1,2
 monitor=,preferred,auto,1
 
 input {
-    kb_layout=de
-    kb_variant=nodeadkeys
-    follow_mouse=1
     touchpad {
         natural_scroll=no
     }
+    kb_layout=de
+    kb_variant=nodeadkeys
+    follow_mouse=1
+    numlock_by_default=true
     sensitivity=0
+    force_no_accel=1
 }
 
 general {
@@ -24,20 +26,22 @@ general {
     border_size=2
     col.active_border=$ACT
     col.inactive_border=$NRM
-    apply_sens_to_raw=0
+    apply_sens_to_raw=false
+    sensitivity=1
     damage_tracking=full
 }
 
 decoration {
     rounding=4
-    blur=1
+    blur=true
     blur_size=3
     blur_passes=2
     blur_new_optimizations=1
+    drop_shadow=false
 }
 
 animations {
-    enabled=1
+    enabled=true
     animation=windows,1,4,default,popin
     animation=workspaces,1,4,default,fade
     animation=border,1,4,default
@@ -45,15 +49,23 @@ animations {
 }
 
 dwindle {
-    pseudotile=0
+    pseudotile=false
     preserve_split=true
-    special_scale_factor=1
+    special_scale_factor=0
+    force_split=false
+    split_width_multiplier=1.0
     no_gaps_when_only=false
     use_active_for_splits=true
 }
 
 gestures {
-    workspace_swipe=no
+    workspace_swipe=true
+}
+
+misc {
+    no_vfr=false
+    animate_manual_resizes=false
+    
 }
 
 # window rules
@@ -81,6 +93,10 @@ bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
 bind=SUPER,up,movefocus,u
 bind=SUPER,down,movefocus,d
+bind=SUPERSHIFT,left,movewindow,l
+bind=SUPERSHIFT,right,movewindow,r
+bind=SUPERSHIFT,up,movewindow,u
+bind=SUPERSHIFT,down,movewindow,d
 bind=SUPER,1,workspace,1
 bind=SUPER,2,workspace,2
 bind=SUPER,3,workspace,3
