--- a/packages/packages.conf
+++ b/packages/packages.conf
@@ -74,12 +74,39 @@ FUNC_MISC=(
     libpwquality
 )
 
-BSC_DE=(
+DE_X=(
     qtile
     dunst
     rofi
     rofi-calc
-    nitrogen
+    feh
+)
+
+DE_X_AUR=(
+    picom-git
+    eww
+    i3lock-color
+)
+
+DE_WAY=(
+    waybar
+    wofi
+    dunst
+    swaybg
+    swaylock
+    slurp
+    grim
+    xdg-desktop-portal-wlr
+    qt5-wayland
+    qt6-wayland
+)
+
+DE_WAY_AUR=(
+    hyprland-bin
+    eww-wayland-git
+)
+
+BSC_DE=(
     nm-connection-editor
     pavucontrol
     kitty
@@ -99,7 +126,6 @@ BSC_DE=(
 )
 
 BSC_DE_AUR=(
-    picom-git
     xfce-polkit
     qt5gtk2
     qt6gtk2
@@ -132,7 +158,6 @@ BSC_MISC=(
     rsync
     ueberzug
     scrot
-    feh
 )
 
 BSC_MISC_AUR=(
