--- a/packages/packages.conf
+++ b/packages/packages.conf
@@ -90,10 +90,10 @@ DE_X_AUR=(
 
 DE_WAY=(
     waybar
-    wofi
     dunst
     swaybg
     swaylock
+    swayidle
     slurp
     grim
     xdg-desktop-portal-wlr
@@ -104,6 +104,7 @@ DE_WAY=(
 DE_WAY_AUR=(
     hyprland-bin
     eww-wayland-git
+    rofi-lbonn-wayland
 )
 
 BSC_DE=(
