--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -8,12 +8,19 @@
 # theme file
 source=./theme.conf
 
-monitor=DP-0,2560x1440@165,auto,1
-workspace=DP-0,1
-monitor=DP-1,1920x1080@144,auto,1
-workspace=DP-1,2
+# main monitor
+monitor=DP-1,2560x1440@165,1080x144,1
+workspace=DP-1,1
+
+# secondary
+monitor=DP-2,1920x1080@144,0x0,1
+monitor=DP-2,transform,1
+workspace=DP-2,2
+
+# default
 monitor=,preferred,auto,1
 
+# main config
 input {
     kb_layout=de
     kb_variant=nodeadkeys
@@ -69,27 +76,30 @@ gestures {
 misc {
     no_vfr=false
     animate_manual_resizes=false
-    
 }
 
 # window rules
-windowrulev2 = float,class:^(Signal)$
-windowrulev2 = float,class:^(org.telegram.desktop)$
-windowrulev2 = float,class:^(xfce-polkit)$
-windowrulev2 = float,class:^(fstl)$
-windowrulev2 = float,class:^(nomacs)$
-windowrulev2 = float,class:^(mpv)$
-windowrulev2 = float,class:^(Zathura)$
+windowrulev2=float,class:^(Signal)$
+windowrulev2=float,class:^(org.telegram.desktop)$
+windowrulev2=float,class:^(xfce-polkit)$
+windowrulev2=float,class:^(fstl)$
+windowrulev2=float,class:^(org.https://nomacs.nomacs)$
+windowrulev2=float,class:^(mpv)$
+windowrulev2=float,class:^(Zathura)$
+windowrulev2=tile,class:^(com.spotify.Client)$
+windowrulev2=center,title:^()$
 
 # main binds
 bind=SUPER,Return,exec,kitty
 bind=SUPERSHIFT,C,killactive
 bind=SUPERSHIFT,Q,exit
 bind=SUPER,Q,exec,thunar
-bind=SUPERSHIFT,S,workspaceopt,allfloat
+bind=SUPER,S,workspaceopt,allfloat
+bind=SUPERSHIFT,S,exec,/home/$USER/.config/scripts/takeWayScreen.sh
+bind=SUPERSHIFT,R,exec,hyprctl reload
 bind=SUPERSHIFT,F,togglefloating,
 bind=SUPER,F,fullscreen
-bind=SUPER,A,exec,wofi
+bind=SUPER,A,exec,rofi -show run
 bind=SUPER,L,exec,/home/$USER/.config/scripts/swaylock.sh
 
 # window and navigation binds
@@ -127,4 +137,5 @@ bind=,XF86AudioPlay,exec,playerctl play-pause
 # autostart
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=/home/$USER/.config/scripts/swayidle.sh
 exec=~/.config/hypr/autostart.sh
