more wayland updates

--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -86,20 +86,20 @@ windowrulev2=float,class:^(fstl)$
 windowrulev2=float,class:^(org.https://nomacs.nomacs)$
 windowrulev2=float,class:^(mpv)$
 windowrulev2=float,class:^(Zathura)$
-windowrulev2=tile,class:^(com.spotify.Client)$
-windowrulev2=center,title:^()$
+windowrulev2=center,class:^(thunar)$,title:^()$
 
 # main binds
 bind=SUPER,Return,exec,kitty
 bind=SUPERSHIFT,C,killactive
-bind=SUPERSHIFT,Q,exit
+bind=SUPERSHIFT,Q,exec,/home/$USER/.config/scripts/ewwPower.sh
 bind=SUPER,Q,exec,thunar
-bind=SUPER,S,workspaceopt,allfloat
+bind=SUPERCTRL,S,workspaceopt,allfloat
 bind=SUPERSHIFT,S,exec,/home/$USER/.config/scripts/takeWayScreen.sh
 bind=SUPERSHIFT,R,exec,hyprctl reload
 bind=SUPERSHIFT,F,togglefloating,
-bind=SUPER,F,fullscreen
+bind=SUPERCTRL,F,fullscreen
 bind=SUPER,A,exec,rofi -show run
+bind=SUPERSHIFT,A,exec,rofi -show calc
 bind=SUPER,L,exec,/home/$USER/.config/scripts/swaylock.sh
 
 # window and navigation binds
@@ -138,4 +138,7 @@ bind=,XF86AudioPlay,exec,playerctl play-pause
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=/home/$USER/.config/scripts/swayidle.sh
+exec-once=hyprctl setcursor Neutral 4
+exec-once=/usr/lib/xfce-polkit/xfce-polkit
+exec-once=easyeffects --gapplication-service
 exec=~/.config/hypr/autostart.sh
