few more wayland specific changes and stuff

--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -87,6 +87,7 @@ windowrulev2=float,class:^(org.https://nomacs.nomacs)$
 windowrulev2=float,class:^(mpv)$
 windowrulev2=float,class:^(Zathura)$
 windowrulev2=center,class:^(thunar)$,title:^()$
+windowrulev2=center,class:^(soffice)$
 
 # main binds
 bind=SUPER,Return,exec,kitty
