bring laptop up-to-date

--- a/configs/laptop/hypr/hyprland.conf
+++ b/configs/laptop/hypr/hyprland.conf
@@ -1,12 +1,25 @@
+#     __  ___________        __                     __                __
+#    / /_<  / __/ __ \      / /_  __  ______  _____/ /___ _____  ____/ /
+#   / //_/ / /_/ / / /_____/ __ \/ / / / __ \/ ___/ / __ `/ __ \/ __  /
+#  / ,< / / __/ /_/ /_____/ / / / /_/ / /_/ / /  / / /_/ / / / / /_/ /
+# /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
+#                              /____/_/
+
 # theme file
 source=./theme.conf
 
+# main monitor
 monitor=eDP-1,1920x1080@60,auto,1
 workspace=eDP-1,1
+
+# USB-C external monitor
 monitor=DP-1,2560x1440@165,auto,1
 workspace=DP-1,2
+
+# default
 monitor=,preferred,auto,1
 
+# main config
 input {
     touchpad {
         natural_scroll=no
@@ -50,8 +63,8 @@ animations {
 
 dwindle {
     pseudotile=false
-    preserve_split=true
-    special_scale_factor=0
+    preserve_split=false
+    special_scale_factor=1.0
     force_split=false
     split_width_multiplier=1.0
     no_gaps_when_only=false
@@ -65,28 +78,33 @@ gestures {
 misc {
     no_vfr=false
     animate_manual_resizes=false
-    
 }
 
 # window rules
-windowrulev2 = float,class:^(Signal)$
-windowrulev2 = float,class:^(org.telegram.desktop)$
-windowrulev2 = float,class:^(xfce-polkit)$
-windowrulev2 = float,class:^(fstl)$
-windowrulev2 = float,class:^(nomacs)$
-windowrulev2 = float,class:^(mpv)$
-windowrulev2 = float,class:^(Zathura)$
+windowrulev2=float,class:^(Signal)$
+windowrulev2=float,class:^(org.telegram.desktop)$
+windowrulev2=float,class:^(xfce-polkit)$
+windowrulev2=float,class:^(fstl)$
+windowrulev2=float,class:^(org.https://nomacs.nomacs)$
+windowrulev2=float,class:^(mpv)$
+windowrulev2=float,class:^(Zathura)$
+windowrulev2=center,class:^(thunar)$,title:^()$
 
-# main binds
+# app binds
 bind=SUPER,Return,exec,kitty
-bind=SUPERSHIFT,C,killactive
-bind=SUPERSHIFT,Q,exit
+bind=SUPERSHIFT,Q,exec,/home/$USER/.config/scripts/ewwPower.sh
 bind=SUPER,Q,exec,thunar
-bind=SUPERSHIFT,S,workspaceopt,allfloat
-bind=SUPERSHIFT,F,togglefloating,
-bind=SUPER,F,fullscreen
-bind=SUPER,A,exec,wofi
+bind=SUPERSHIFT,S,exec,/home/$USER/.config/scripts/takeWayScreen.sh
+bind=SUPER,A,exec,rofi -show run
+bind=SUPERSHIFT,A,exec,rofi -show calc
 bind=SUPER,L,exec,/home/$USER/.config/scripts/swaylock.sh
+
+# wm mod binds
+bind=SUPERSHIFT,C,killactive
+bind=SUPERSHIFT,R,exec,hyprctl reload
+bind=SUPERSHIFT,F,togglefloating,
+bind=SUPERCTRL,F,fullscreen
+bind=SUPERCTRL,S,workspaceopt,allfloat
 
 # window and navigation binds
 bind=SUPER,left,movefocus,l
@@ -123,4 +141,8 @@ bind=,XF86AudioPlay,exec,playerctl play-pause
 # autostart
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=/home/$USER/.config/scripts/swayidle.sh
+exec-once=hyprctl setcursor Neutral 4
+exec-once=/usr/lib/xfce-polkit/xfce-polkit
+exec-once=easyeffects --gapplication-service
 exec=~/.config/hypr/autostart.sh
