--- a/configs/laptop/waybar/config
+++ b/configs/laptop/waybar/config
@@ -1,12 +1,18 @@
+//     __  ___________                            __              
+//    / /_<  / __/ __ \     _      ______ ___  __/ /_  ____ ______
+//   / //_/ / /_/ / / /____| | /| / / __ `/ / / / __ \/ __ `/ ___/
+//  / ,< / / __/ /_/ /_____/ |/ |/ / /_/ / /_/ / /_/ / /_/ / /    
+// /_/|_/_/_/  \____/      |__/|__/\__,_/\__, /_.___/\__,_/_/     
+//                                      /____/                    
+
 {
     "layer": "top",
     "position": "top",
     "height": 24, 
-    // "width": 1280,
-    "spacing": 4,
-    "modules-left": [],
+    "spacing": 8,
+    "modules-left": ["network"],
     "modules-center": ["cpu","clock","memory"],
-    "modules-right": ["network","battery"],
+    "modules-right": ["battery"],
 
     // Modules configuration
 
@@ -15,38 +21,31 @@
         "spacing": 10
     },
     "clock": {
-        // "timezone": "America/New_York",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d}"
+        "format": "{:%H:%M:%S}",
+        "format-alt": "{:%d-%m-%Y}",
+        "tooltip": false,
+        "interval": 1,
     },
     "cpu": {
-        "format": "{usage}% ",
-        "tooltip": false
+        "format": "cpu {usage}%",
+        "tooltip": false,
     },
     "memory": {
-        "format": "{}% "
+        "format": "mem {}%",
     },
     "battery": {
-        "states": {
-            // "good": 95,
-            "warning": 30,
-            "critical": 15
-        },
-        "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        "format-alt": "{time} {icon}",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
-        "format-icons": ["", "", "", "", ""]
+        "format": "dsc {capacity}%",
+        "format-charging": "chr {capacity}%",
+        "format-full": "chrgd",
+        "format-alt": "{capacity}%",
+        "tooltip": false,
     },
     "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
-        "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+        "interface": "wlan0",
+        "format-wifi": "wifi {essid} lq {signalStrength}%",
+        "format-linked": "wifi {ifname} no IP",
+        "format-disconnected": "dsc",
+        "format-alt": "wifi {ifname} ?",
+        "interval": 5,
     },
 }
