--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -89,19 +89,21 @@ windowrulev2=float,class:^(Zathura)$
 windowrulev2=center,class:^(thunar)$,title:^()$
 windowrulev2=center,class:^(soffice)$
 
-# main binds
+# app binds
 bind=SUPER,Return,exec,kitty
-bind=SUPERSHIFT,C,killactive
 bind=SUPERSHIFT,Q,exec,/home/$USER/.config/scripts/ewwPower.sh
 bind=SUPER,Q,exec,thunar
-bind=SUPERCTRL,S,workspaceopt,allfloat
 bind=SUPERSHIFT,S,exec,/home/$USER/.config/scripts/takeWayScreen.sh
-bind=SUPERSHIFT,R,exec,hyprctl reload
-bind=SUPERSHIFT,F,togglefloating,
-bind=SUPERCTRL,F,fullscreen
 bind=SUPER,A,exec,rofi -show run
 bind=SUPERSHIFT,A,exec,rofi -show calc
 bind=SUPER,L,exec,/home/$USER/.config/scripts/swaylock.sh
+
+# wm mod binds
+bind=SUPERSHIFT,C,killactive
+bind=SUPERSHIFT,R,exec,hyprctl reload
+bind=SUPERSHIFT,F,togglefloating,
+bind=SUPERCTRL,F,fullscreen
+bind=SUPERCTRL,S,workspaceopt,allfloat
 
 # window and navigation binds
 bind=SUPER,left,movefocus,l
