--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -78,16 +78,23 @@ misc {
     animate_manual_resizes=false
 }
 
-# window rules
+# float rules
 windowrulev2=float,class:^(Signal)$
 windowrulev2=float,class:^(org.telegram.desktop)$
 windowrulev2=float,class:^(xfce-polkit)$
-windowrulev2=float,class:^(fstl)$
-windowrulev2=float,class:^(org.https://nomacs.nomacs)$
+windowrulev2=float,class:(fstl-app)
+windowrulev2=float,class:(nomacs.nomacs)
 windowrulev2=float,class:^(mpv)$
-windowrulev2=float,class:^(Zathura)$
-windowrulev2=center,class:^(thunar)$,title:^()$
+windowrulev2=float,class:^(org.pwmt.zathura)$
+windowrulev2=float,class:^(thunar)$,title:([pP]rogress)
+windowrulev2=float,class:^(file-roller)$,title:([cC]ompress|[eE]xtract)
+
+# center rules
+windowrulev2=center,class:^(file-roller)$
 windowrulev2=center,class:^(soffice)$
+windowrulev2=center,class:^(xfce-polkit)$
+windowrulev2=center,class:^(firefox)$
+windowrulev2=center,class:^(thunar)$
 
 # app binds
 bind=SUPER,Return,exec,kitty
