few adaptions for hyprland floating and script adjust

--- a/configs/combined/electron-flags.conf
+++ b/configs/combined/electron-flags.conf
@@ -3,3 +3,5 @@
 --enable-accelerated-video
 --ignore-gpu-blacklist
 --enable-gpu-rasterization
+--enable-features=UseOzonePlatform
+--ozone-platform=wayland
