--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -5,8 +5,12 @@
 # /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
 #                              /____/_/
 
+### IMPORTS ###
+
 # theme file
 source=./theme.conf
+
+### INPUTS ###
 
 # main monitor
 monitor=DP-1,2560x1440@165,1080x144,1
@@ -20,7 +24,8 @@ workspace=DP-2,2
 # default
 monitor=,preferred,auto,1
 
-# main config
+### MAIN ###
+
 input {
     kb_layout=de
     kb_variant=nodeadkeys
@@ -78,23 +83,30 @@ misc {
     animate_manual_resizes=false
 }
 
+### WINDOW RULES ###
+
 # float rules
-windowrulev2=float,class:^(Signal)$
+windowrulev2=float,class:^([sS]ignal)$
 windowrulev2=float,class:^(org.telegram.desktop)$
 windowrulev2=float,class:^(xfce-polkit)$
 windowrulev2=float,class:(fstl-app)
 windowrulev2=float,class:(nomacs.nomacs)
 windowrulev2=float,class:^(mpv)$
 windowrulev2=float,class:^(org.pwmt.zathura)$
-windowrulev2=float,class:^(thunar)$,title:([pP]rogress)
-windowrulev2=float,class:^(file-roller)$,title:([cC]ompress|[eE]xtract)
+windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen)
 
 # center rules
 windowrulev2=center,class:^(file-roller)$
 windowrulev2=center,class:^(soffice)$
 windowrulev2=center,class:^(xfce-polkit)$
+windowrulev2=center,class:(desktop-portal)
 windowrulev2=center,class:^(firefox)$
 windowrulev2=center,class:^(thunar)$
+
+# size rules
+windowrulev2=size,20%,20%,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen)
+
+### KEYBINDS ###
 
 # app binds
 bind=SUPER,Return,exec,kitty
@@ -144,10 +156,11 @@ bind=,XF86AudioNext,exec,playerctl next
 bind=,XF86AudioPrev,exec,playerctl previous
 bind=,XF86AudioPlay,exec,playerctl play-pause
 
-# autostart
+### AUTOSTART ###
+
+# exec
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=/home/$USER/.config/scripts/swayidle.sh
 exec-once=hyprctl setcursor Neutral 4
 exec-once=/usr/lib/xfce-polkit/xfce-polkit
 exec-once=easyeffects --gapplication-service
