--- a/configs/laptop/hypr/hyprland.conf
+++ b/configs/laptop/hypr/hyprland.conf
@@ -5,8 +5,12 @@
 # /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
 #                              /____/_/
 
+### IMPORTS ###
+
 # theme file
 source=./theme.conf
+
+### INPUTS ###
 
 # main monitor
 monitor=eDP-1,1920x1080@60,auto,1
@@ -19,7 +23,8 @@ workspace=DP-1,2
 # default
 monitor=,preferred,auto,1
 
-# main config
+### MAIN ###
+
 input {
     touchpad {
         natural_scroll=no
@@ -33,7 +38,6 @@ input {
 }
 
 general {
-    main_mod=SUPER
     gaps_in=5
     gaps_out=10
     border_size=2
@@ -80,15 +84,30 @@ misc {
     animate_manual_resizes=false
 }
 
-# window rules
-windowrulev2=float,class:^(Signal)$
+### WINDOW RULES ###
+
+# float rules
+windowrulev2=float,class:^([sS]ignal)$
 windowrulev2=float,class:^(org.telegram.desktop)$
 windowrulev2=float,class:^(xfce-polkit)$
-windowrulev2=float,class:^(fstl)$
-windowrulev2=float,class:^(org.https://nomacs.nomacs)$
+windowrulev2=float,class:(fstl-app)
+windowrulev2=float,class:(nomacs.nomacs)
 windowrulev2=float,class:^(mpv)$
-windowrulev2=float,class:^(Zathura)$
-windowrulev2=center,class:^(thunar)$,title:^()$
+windowrulev2=float,class:^(org.pwmt.zathura)$
+windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen)
+
+# center rules
+windowrulev2=center,class:^(file-roller)$
+windowrulev2=center,class:^(soffice)$
+windowrulev2=center,class:^(xfce-polkit)$
+windowrulev2=center,class:(desktop-portal)
+windowrulev2=center,class:^(firefox)$
+windowrulev2=center,class:^(thunar)$
+
+# size rules
+windowrulev2=size,20%,20%,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen)
+
+### KEYBINDS ###
 
 # app binds
 bind=SUPER,Return,exec,kitty
@@ -105,6 +124,8 @@ bind=SUPERSHIFT,R,exec,hyprctl reload
 bind=SUPERSHIFT,F,togglefloating,
 bind=SUPERCTRL,F,fullscreen
 bind=SUPERCTRL,S,workspaceopt,allfloat
+bindm=SUPER,mouse:272,movewindow
+bindm=SUPER,mouse:273,resizewindow
 
 # window and navigation binds
 bind=SUPER,left,movefocus,l
@@ -138,10 +159,11 @@ bind=,XF86AudioNext,exec,playerctl next
 bind=,XF86AudioPrev,exec,playerctl previous
 bind=,XF86AudioPlay,exec,playerctl play-pause
 
-# autostart
+### AUTOSTART ###
+
+# exec
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=/home/$USER/.config/scripts/swayidle.sh
 exec-once=hyprctl setcursor Neutral 4
 exec-once=/usr/lib/xfce-polkit/xfce-polkit
 exec-once=easyeffects --gapplication-service
