--- a/configs/laptop/hypr/theme.conf
+++ b/configs/laptop/hypr/theme.conf
@@ -1,5 +1,12 @@
-$NRM=0xff303838
-$ACT=0xffe8e8e8
-$FGD=0xffa8b0a8
-$BGD=0xff101818
+#     __  ___________        __                     __                __
+#    / /_<  / __/ __ \      / /_  __  ______  _____/ /___ _____  ____/ /
+#   / //_/ / /_/ / / /_____/ __ \/ / / / __ \/ ___/ / __ `/ __ \/ __  /
+#  / ,< / / __/ /_/ /_____/ / / / /_/ / /_/ / /  / / /_/ / / / / /_/ /
+# /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
+#                              /____/_/
+
+$NRM=0xff404838
+$ACT=0xffe8d8b8
+$FGD=0xffd0d0b0
+$BGD=0xff181818
 $URG=0xffff0000
