kotlin compile script and pc wayland stuff

--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -36,7 +36,6 @@ input {
 }
 
 general {
-    main_mod=SUPER
     gaps_in=5
     gaps_out=10
     border_size=2
@@ -123,6 +122,8 @@ bind=SUPERSHIFT,R,exec,hyprctl reload
 bind=SUPERSHIFT,F,togglefloating,
 bind=SUPERCTRL,F,fullscreen
 bind=SUPERCTRL,S,workspaceopt,allfloat
+bindm=SUPER,mouse:272,movewindow
+bindm=SUPER,mouse:273,resizewindow
 
 # window and navigation binds
 bind=SUPER,left,movefocus,l
