--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -22,7 +22,7 @@ monitor=DP-2,transform,1
 workspace=DP-2,2
 
 # default
-monitor=,preferred,auto,1
+monitor=,highrr,auto,1
 
 ### MAIN ###
 
@@ -125,11 +125,13 @@ bind=SUPERCTRL,S,workspaceopt,allfloat
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 
-# window and navigation binds
+# navigation binds
 bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
 bind=SUPER,up,movefocus,u
 bind=SUPER,down,movefocus,d
+bind=SUPERCTRL,right,movecurrentworkspacetomonitor,r
+bind=SUPERCTRL,left,movecurrentworkspacetomonitor,l
 bind=SUPERSHIFT,left,movewindow,l
 bind=SUPERSHIFT,right,movewindow,r
 bind=SUPERSHIFT,up,movewindow,u
@@ -139,15 +141,14 @@ bind=SUPER,2,workspace,2
 bind=SUPER,3,workspace,3
 bind=SUPER,4,workspace,4
 bind=SUPER,5,workspace,5
-bind=SUPER,6,workspace,6
 bind=SUPERSHIFT,1,movetoworkspace,1
 bind=SUPERSHIFT,2,movetoworkspace,2
 bind=SUPERSHIFT,3,movetoworkspace,3
 bind=SUPERSHIFT,4,movetoworkspace,4
 bind=SUPERSHIFT,5,movetoworkspace,5
-bind=SUPERSHIFT,6,movetoworkspace,6
 
 # media keys
+bind=,XF86Calculator,exec,rofi -show calc
 bind=,XF86AudioLowerVolume,exec,/home/$USER/.config/scripts/volumeDown.sh
 bind=,XF86AudioRaiseVolume,exec,/home/$USER/.config/scripts/volumeUp.sh
 bind=,XF86AudioMute,exec,/home/$USER/.config/scripts/volumeMute.sh
@@ -160,8 +161,8 @@ bind=,XF86AudioPlay,exec,playerctl play-pause
 ### AUTOSTART ###
 
 # exec
-exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=hyprctl setcursor Neutral 4
 exec-once=/usr/lib/xfce-polkit/xfce-polkit
 exec-once=easyeffects --gapplication-service
