update stuff and packages

--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -32,7 +32,9 @@ input {
     follow_mouse=1
     numlock_by_default=true
     sensitivity=0
-    force_no_accel=1
+    accel_profile=flat
+    force_no_accel=true
+    natural_scroll=false
 }
 
 general {
@@ -73,13 +75,10 @@ dwindle {
     use_active_for_splits=true
 }
 
-gestures {
-    workspace_swipe=false
-}
-
 misc {
     no_vfr=false
     animate_manual_resizes=false
+    mouse_move_enables_dpms=true
 }
 
 ### WINDOW RULES ###
@@ -89,10 +88,10 @@ windowrulev2=float,class:^([sS]ignal)$
 windowrulev2=float,class:^(org.telegram.desktop)$
 windowrulev2=float,class:^(xfce-polkit)$
 windowrulev2=float,class:(fstl-app)
-windowrulev2=float,class:(nomacs.nomacs)
+windowrulev2=float,class:(imv)
 windowrulev2=float,class:^(mpv)$
 windowrulev2=float,class:^(org.pwmt.zathura)$
-windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen)
+windowrulev2=float,title:([fF]ile|[cC]ompress|[eE]xtract|[pP]rogress|[oO]pen)
 
 # center rules
 windowrulev2=center,class:^(file-roller)$
@@ -101,9 +100,11 @@ windowrulev2=center,class:^(xfce-polkit)$
 windowrulev2=center,class:(desktop-portal)
 windowrulev2=center,class:^(firefox)$
 windowrulev2=center,class:^(thunar)$
+windowrulev2=float,title:([fF]ile|[cC]ompress|[eE]xtract|[pP]rogress|[oO]pen)
 
 # size rules
-windowrulev2=size,20%,20%,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen)
+windowrulev2=minsize 800 400,class:^(winbox.exe)$
+windowrulev2=minsize 900 600,class:^(lutris)$
 
 ### KEYBINDS ###
 
