--- a/packages/packages.conf
+++ b/packages/packages.conf
@@ -118,7 +118,7 @@ BSC_DE=(
     easyeffects
     zathura
     zathura-pdf-poppler
-    nomacs
+    imv
     mpv
     system-config-printer
     lxappearance
