--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -79,6 +79,8 @@ misc {
     no_vfr=false
     animate_manual_resizes=false
     mouse_move_enables_dpms=true
+    enable_swallow=false
+    swallow_regex=^(kitty)$
 }
 
 ### WINDOW RULES ###
@@ -86,25 +88,30 @@ misc {
 # float rules
 windowrulev2=float,class:^([sS]ignal)$
 windowrulev2=float,class:^(org.telegram.desktop)$
-windowrulev2=float,class:^(xfce-polkit)$
 windowrulev2=float,class:(fstl-app)
 windowrulev2=float,class:(imv)
 windowrulev2=float,class:^(mpv)$
 windowrulev2=float,class:^(org.pwmt.zathura)$
-windowrulev2=float,title:([fF]ile|[cC]ompress|[eE]xtract|[pP]rogress|[oO]pen)
+windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
+windowrulev2=float,title:([pP]in|[pP]assword|[aA]uthentication)
+windowrulev2=float,title:^$
+
+# tile rules
+windowrulev2=tile,class:^(yubioath)
+
+# size rules
+windowrulev2=minsize 800 400,class:^(winbox.exe)$
+windowrulev2=minsize 400 200,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
+windowrulev2=maxsize 900 800,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
 
 # center rules
 windowrulev2=center,class:^(file-roller)$
 windowrulev2=center,class:^(soffice)$
-windowrulev2=center,class:^(xfce-polkit)$
 windowrulev2=center,class:(desktop-portal)
 windowrulev2=center,class:^(firefox)$
 windowrulev2=center,class:^(thunar)$
-windowrulev2=float,title:([fF]ile|[cC]ompress|[eE]xtract|[pP]rogress|[oO]pen)
-
-# size rules
-windowrulev2=minsize 800 400,class:^(winbox.exe)$
-windowrulev2=minsize 900 600,class:^(lutris)$
+windowrulev2=center,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
+windowrulev2=center,title:([pP]in|[pP]assword|[aA]uthentication)
 
 ### KEYBINDS ###
 
