--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -67,7 +67,7 @@ animations {
 
 dwindle {
     pseudotile=false
-    preserve_split=false
+    preserve_split=true
     special_scale_factor=0
     force_split=false
     split_width_multiplier=1.0
@@ -76,7 +76,7 @@ dwindle {
 }
 
 misc {
-    no_vfr=false
+    no_vfr=true
     animate_manual_resizes=false
     mouse_move_enables_dpms=true
     enable_swallow=false
