update pc configs and easyeffects

--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -59,8 +59,9 @@ decoration {
 
 animations {
     enabled=true
-    animation=windows,1,4,default,popin
-    animation=workspaces,1,4,default,fade
+    bezier=overshoot,0.05,0.9,0.05,1.05
+    animation=windows,1,4,overshoot,slide
+    animation=workspaces,1,4,overshoot,slide
     animation=border,1,4,default
     animation=fade,1,4,default
 }
@@ -126,6 +127,7 @@ bind=SUPER,L,exec,/home/$USER/.config/scripts/swaylock.sh
 
 # wm mod binds
 bind=SUPERSHIFT,C,killactive
+bind=SUPER,B,bringactivetotop
 bind=SUPERSHIFT,R,exec,hyprctl reload
 bind=SUPERSHIFT,F,togglefloating,
 bind=SUPERCTRL,F,fullscreen
@@ -149,11 +151,11 @@ bind=SUPER,2,workspace,2
 bind=SUPER,3,workspace,3
 bind=SUPER,4,workspace,4
 bind=SUPER,5,workspace,5
-bind=SUPERSHIFT,1,movetoworkspace,1
-bind=SUPERSHIFT,2,movetoworkspace,2
-bind=SUPERSHIFT,3,movetoworkspace,3
-bind=SUPERSHIFT,4,movetoworkspace,4
-bind=SUPERSHIFT,5,movetoworkspace,5
+bind=SUPERSHIFT,1,movetoworkspacesilent,1
+bind=SUPERSHIFT,2,movetoworkspacesilent,2
+bind=SUPERSHIFT,3,movetoworkspacesilent,3
+bind=SUPERSHIFT,4,movetoworkspacesilent,4
+bind=SUPERSHIFT,5,movetoworkspacesilent,5
 
 # media keys
 bind=,XF86Calculator,exec,rofi -show calc
