--- a/configs/pc/hypr/theme.conf
+++ b/configs/pc/hypr/theme.conf
@@ -6,8 +6,8 @@
 #                              /____/_/
 
 # colors
-$NRM=0xff606888
-$ACT=0xffd04038
-$FGD=0xffc0b0b8
-$BGD=0xff081030
+$NRM=0xff784858
+$ACT=0xffe0e0e8
+$FGD=0xffd890a8
+$BGD=0xff101840
 $URG=0xffff0000
