compact scripts, fix eww config

--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -9,6 +9,9 @@
 
 # theme file
 source=./theme.conf
+# script path
+$WAY_SCRIPT_PATH=/home/$USER/.config/scripts/wayland
+$SCRIPT_PATH=/home/$USER/.config/scripts
 
 ### INPUTS ###
 
@@ -118,12 +121,12 @@ windowrulev2=center,title:([pP]in|[pP]assword|[aA]uthentication)
 
 # app binds
 bind=SUPER,Return,exec,kitty
-bind=SUPERSHIFT,Q,exec,/home/$USER/.config/scripts/ewwPower.sh
+bind=SUPERSHIFT,Q,exec,$WAY_SCRIPT_PATH/ewwPower.sh
 bind=SUPER,Q,exec,thunar
-bind=SUPERSHIFT,S,exec,/home/$USER/.config/scripts/takeWayScreen.sh
+bind=SUPERSHIFT,S,exec,$WAY_SCRIPT_PATH/takeWayScreen.sh
 bind=SUPER,A,exec,rofi -show run
 bind=SUPERSHIFT,A,exec,rofi -show calc
-bind=SUPER,L,exec,/home/$USER/.config/scripts/swaylock.sh
+bind=SUPER,L,exec,$WAY_SCRIPT_PATH/swaylock.sh
 
 # wm mod binds
 bind=SUPERSHIFT,C,killactive
@@ -159,14 +162,12 @@ bind=SUPERSHIFT,5,movetoworkspacesilent,5
 
 # media keys
 bind=,XF86Calculator,exec,rofi -show calc
-bind=,XF86AudioLowerVolume,exec,/home/$USER/.config/scripts/volumeDown.sh
-bind=,XF86AudioRaiseVolume,exec,/home/$USER/.config/scripts/volumeUp.sh
-bind=,XF86AudioMute,exec,/home/$USER/.config/scripts/volumeMute.sh
-bind=,XF86MonBrightnessDown,exec,/home/$USER/.config/scripts/brightDown.sh
-bind=,XF86MonBrightnessUp,exec,/home/$USER/.config/scripts/brightUp.sh
-bind=,XF86AudioNext,exec,playerctl next
-bind=,XF86AudioPrev,exec,playerctl previous
-bind=,XF86AudioPlay,exec,playerctl play-pause
+bind=,XF86AudioLowerVolume,exec,$SCRIPT_PATH/volume.sh down
+bind=,XF86AudioRaiseVolume,exec,$SCRIPT_PATH/volume.sh up
+bind=,XF86AudioMute,exec,$SCRIPT_PATH/volume.sh mute
+bind=,XF86AudioNext,exec,$SCRIPT_PATH/media.sh next
+bind=,XF86AudioPrev,exec,$SCRIPT_PATH/media.sh prev
+bind=,XF86AudioPlay,exec,$SCRIPT_PATH/media.sh pp
 
 ### AUTOSTART ###
 
