cleanup scripts mostly

--- a/packages/packages.conf
+++ b/packages/packages.conf
@@ -87,13 +87,13 @@ DE_X_AUR=(
 )
 
 DE_WAY=(
-    waybar
     dunst
     swaybg
     swaylock
     swayidle
     slurp
     grim
+    wl-clipboard
     xdg-desktop-portal-wlr
     qt5-wayland
     qt6-wayland
@@ -102,6 +102,7 @@ DE_WAY=(
 DE_WAY_AUR=(
     hyprland-bin
     eww-wayland-git
+    waybar-hyprland
     rofi-lbonn-wayland
     swaylockd
 )
