--- a/configs/pc/waybar/config
+++ b/configs/pc/waybar/config
@@ -11,8 +11,8 @@
     "layer": "top",
     "position": "top",
     "height": 24, 
-    "spacing": 8,
-    "modules-left": [],
+    // "spacing": 8,
+    "modules-left": ["wlr/workspaces"],
     "modules-center": ["cpu","clock","memory"],
     "modules-right": ["network"],
 
@@ -41,4 +41,14 @@
         "interval": 2,
         "tooltip": false
     },
+    "wlr/workspaces": {
+      "format": "{icon}",
+      "on-click": "activate",
+      "format-icons": {
+        "urgent": "",
+        "active": "",
+        "default": ""
+      },
+      "sort-by-number": true
+    }
 }
