--- a/configs/pc/waybar/config
+++ b/configs/pc/waybar/config
@@ -9,9 +9,12 @@
     // Base Config
 
     "layer": "top",
+    "mode": "dock",
+    "fixed-center": true,
     "position": "top",
-    "height": 24, 
-    // "spacing": 8,
+    "height": "",
+    "spacing": 0,
+    "margin": "0px 0px 0px 0px",
     "modules-left": ["wlr/workspaces"],
     "modules-center": ["cpu","clock","memory"],
     "modules-right": ["network"],
@@ -45,8 +48,8 @@
       "format": "{icon}",
       "on-click": "activate",
       "format-icons": {
-        "urgent": "",
-        "active": "",
+        "urgent": "",
+        "active": "",
         "default": ""
       },
       "sort-by-number": true
