--- a/configs/laptop/hypr/hyprland.conf
+++ b/configs/laptop/hypr/hyprland.conf
@@ -9,6 +9,9 @@
 
 # theme file
 source=./theme.conf
+# script path
+$WAY_SCRIPT_PATH=/home/$USER/.config/scripts/wayland
+$SCRIPT_PATH=/home/$USER/.config/scripts
 
 ### INPUTS ###
 
@@ -17,11 +20,11 @@ monitor=eDP-1,1920x1080@60,auto,1
 workspace=eDP-1,1
 
 # USB-C external monitor
-monitor=DP-1,2560x1440@165,auto,1
-workspace=DP-1,2
+#monitor=DP-1,2560x1440@165,auto,1
+#workspace=DP-1,2
 
 # default
-monitor=,preferred,auto,1
+monitor=,highrr,auto,1
 
 ### MAIN ###
 
@@ -34,12 +37,14 @@ input {
     follow_mouse=1
     numlock_by_default=true
     sensitivity=0
-    force_no_accel=1
+    accel_profile=flat
+    force_no_accel=true
+    natural_scroll=false
 }
 
 general {
-    gaps_in=5
-    gaps_out=10
+    gaps_in=4
+    gaps_out=8
     border_size=2
     col.active_border=$ACT
     col.inactive_border=$NRM
@@ -67,10 +72,10 @@ animations {
 
 dwindle {
     pseudotile=false
-    preserve_split=false
-    special_scale_factor=1.0
+    preserve_split=true
+    #special_scale_factor=0
     force_split=false
-    split_width_multiplier=1.0
+    #split_width_multiplier=0
     no_gaps_when_only=false
     use_active_for_splits=true
 }
@@ -80,8 +85,11 @@ gestures {
 }
 
 misc {
-    no_vfr=false
+    no_vfr=true
     animate_manual_resizes=false
+    mouse_move_enables_dpms=true
+    enable_swallow=false
+    swallow_regex=^(kitty)$
 }
 
 ### WINDOW RULES ###
@@ -89,34 +97,43 @@ misc {
 # float rules
 windowrulev2=float,class:^([sS]ignal)$
 windowrulev2=float,class:^(org.telegram.desktop)$
-windowrulev2=float,class:^(xfce-polkit)$
 windowrulev2=float,class:(fstl-app)
-windowrulev2=float,class:(nomacs.nomacs)
+windowrulev2=float,class:(imv)
 windowrulev2=float,class:^(mpv)$
 windowrulev2=float,class:^(org.pwmt.zathura)$
-windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen)
+windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
+windowrulev2=float,title:([pP]in|[pP]assword|[aA]uthentication)
+windowrulev2=float,title:^$
+
+# tile rules
+windowrulev2=tile,class:^(yubioath)
+
+# size rules
+windowrulev2=minsize 800 400,class:^(winbox.exe)$
+windowrulev2=minsize 400 200,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]p
+load)
+windowrulev2=maxsize 900 800,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]p
+load)
 
 # center rules
 windowrulev2=center,class:^(file-roller)$
 windowrulev2=center,class:^(soffice)$
-windowrulev2=center,class:^(xfce-polkit)$
 windowrulev2=center,class:(desktop-portal)
 windowrulev2=center,class:^(firefox)$
 windowrulev2=center,class:^(thunar)$
-
-# size rules
-windowrulev2=size,20%,20%,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen)
+windowrulev2=center,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
+windowrulev2=center,title:([pP]in|[pP]assword|[aA]uthentication)
 
 ### KEYBINDS ###
 
 # app binds
 bind=SUPER,Return,exec,kitty
-bind=SUPERSHIFT,Q,exec,/home/$USER/.config/scripts/ewwPower.sh
+bind=SUPERSHIFT,Q,exec,$WAY_SCRIPT_PATH/ewwPower.sh
 bind=SUPER,Q,exec,thunar
-bind=SUPERSHIFT,S,exec,/home/$USER/.config/scripts/takeWayScreen.sh
+bind=SUPERSHIFT,S,exec,$WAY_SCRIPT_PATH/takeWayScreen.sh
 bind=SUPER,A,exec,rofi -show run
 bind=SUPERSHIFT,A,exec,rofi -show calc
-bind=SUPER,L,exec,/home/$USER/.config/scripts/swaylock.sh
+bind=SUPER,L,exec,$WAY_SCRIPT_PATH/swaylock.sh
 
 # wm mod binds
 bind=SUPERSHIFT,C,killactive
@@ -136,6 +153,8 @@ bind=SUPERSHIFT,left,movewindow,l
 bind=SUPERSHIFT,right,movewindow,r
 bind=SUPERSHIFT,up,movewindow,u
 bind=SUPERSHIFT,down,movewindow,d
+bind=SUPERCTRL,right,movecurrentworkspacetomonitor,r
+bind=SUPERCTRL,left,movecurrentworkspacetomonitor,l
 bind=SUPER,1,workspace,1
 bind=SUPER,2,workspace,2
 bind=SUPER,3,workspace,3
@@ -150,21 +169,20 @@ bind=SUPERSHIFT,5,movetoworkspace,5
 bind=SUPERSHIFT,6,movetoworkspace,6
 
 # media keys
-bind=,XF86AudioLowerVolume,exec,/home/$USER/.config/scripts/volumeDown.sh
-bind=,XF86AudioRaiseVolume,exec,/home/$USER/.config/scripts/volumeUp.sh
-bind=,XF86AudioMute,exec,/home/$USER/.config/scripts/volumeMute.sh
-bind=,XF86MonBrightnessDown,exec,/home/$USER/.config/scripts/brightDown.sh
-bind=,XF86MonBrightnessUp,exec,/home/$USER/.config/scripts/brightUp.sh
-bind=,XF86AudioNext,exec,playerctl next
-bind=,XF86AudioPrev,exec,playerctl previous
-bind=,XF86AudioPlay,exec,playerctl play-pause
+bind=,XF86AudioLowerVolume,exec,$SCRIPT_PATH/volume.sh down
+bind=,XF86AudioRaiseVolume,exec,$SCRIPT_PATH/volume.sh up
+bind=,XF86AudioMute,exec,$SCRIPT_PATH/volume.sh mute
+bind=,XF86AudioNext,exec,$SCRIPT_PATH/media.sh next
+bind=,XF86AudioPrev,exec,$SCRIPT_PATH/media.sh prev
+bind=,XF86AudioPlay,exec,$SCRIPT_PATH/media.sh pp
+bind=,XF86MonBrightnessDown,exec,$SCRIPT_PATH/brightness.sh down
+bind=,XF86MonBrightnessUp,exec,$SCRIPT_PATH/brightness.sh up
 
 ### AUTOSTART ###
 
 # exec
-exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=hyprctl setcursor Neutral 4
 exec-once=/usr/lib/xfce-polkit/xfce-polkit
-exec-once=easyeffects --gapplication-service
 exec=~/.config/hypr/autostart.sh
