--- a/configs/laptop/waybar/config
+++ b/configs/laptop/waybar/config
@@ -7,19 +7,17 @@
 
 {
     "layer": "top",
+    "mode": "dock",
+    "fixed-center": true,
     "position": "top",
-    "height": 24, 
-    "spacing": 8,
-    "modules-left": ["network"],
+    "height": "",
+    "spacing": 0,
+    "modules-left": ["wlr/workspaces"],
     "modules-center": ["cpu","clock","memory"],
-    "modules-right": ["battery"],
+    "modules-right": ["network","battery"],
 
     // Modules configuration
 
-    "tray": {
-        // "icon-size": 21,
-        "spacing": 10
-    },
     "clock": {
         "format": "{:%H:%M:%S}",
         "format-alt": "{:%d-%m-%Y}",
@@ -50,4 +48,14 @@
         "format-alt": "{capacity}%",
         "tooltip": false,
     },
+    "wlr/workspaces": {
+      "format": "{icon}",
+      "on-click": "activate",
+      "format-icons": {
+        "urgent": "",
+        "active": "",
+        "default": ""
+      },
+      "sort-by-number": true
+    }
 }
