fix eww lock and edit bashrc

--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -174,7 +174,7 @@ bind=,XF86AudioPlay,exec,$SCRIPT_PATH/media.sh pp
 # exec
 exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=hyprctl setcursor Neutral 4
+exec-once=hyprctl setcursor XCursor-Pro-Dark 4
 exec-once=/usr/lib/xfce-polkit/xfce-polkit
 exec-once=easyeffects --gapplication-service
 exec=~/.config/hypr/autostart.sh
