--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -54,8 +54,8 @@ general {
 decoration {
     rounding=4
     blur=true
-    blur_size=3
-    blur_passes=2
+    blur_size=4
+    blur_passes=1
     blur_new_optimizations=1
     drop_shadow=false
 }
@@ -117,6 +117,10 @@ windowrulev2=center,class:^(thunar)$
 windowrulev2=center,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
 windowrulev2=center,title:([pP]in|[pP]assword|[aA]uthentication)
 
+# idle inhibit
+#windowrulev2=idleinhibit fullscreen,class:^(firefox)$
+#windowrulev2=idleinhibit fullscreen,class:^(mpv)$
+
 ### KEYBINDS ###
 
 # app binds
@@ -174,7 +178,8 @@ bind=,XF86AudioPlay,exec,$SCRIPT_PATH/media.sh pp
 # exec
 exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=/home/$USER/.config/hypr/xdg-portal.sh
 exec-once=hyprctl setcursor XCursor-Pro-Dark 4
 exec-once=/usr/lib/xfce-polkit/xfce-polkit
 exec-once=easyeffects --gapplication-service
-exec=~/.config/hypr/autostart.sh
+exec=/home/$USER/.config/hypr/autostart.sh
