--- a/configs/combined/electron-flags.conf
+++ b/configs/combined/electron-flags.conf
@@ -3,5 +3,7 @@
 --enable-accelerated-video
 --ignore-gpu-blacklist
 --enable-gpu-rasterization
+--enable-features=WaylandWindowDecorations
+--ozone-platform-hint=auto
 --enable-features=UseOzonePlatform
 --ozone-platform=wayland
