--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -38,6 +38,7 @@ input {
     accel_profile=flat
     force_no_accel=true
     natural_scroll=false
+    float_switch_override_focus=true
 }
 
 general {
@@ -48,7 +49,6 @@ general {
     col.inactive_border=$NRM
     apply_sens_to_raw=false
     sensitivity=1
-    damage_tracking=full
 }
 
 decoration {
@@ -62,6 +62,7 @@ decoration {
 
 animations {
     enabled=true
+    use_resize_transitions=false
     bezier=overshoot,0.05,0.9,0.05,1.05
     animation=windows,1,4,overshoot,slide
     animation=workspaces,1,4,overshoot,slide
@@ -72,11 +73,13 @@ animations {
 dwindle {
     pseudotile=false
     preserve_split=true
-    special_scale_factor=0
-    force_split=false
-    split_width_multiplier=1.0
     no_gaps_when_only=false
     use_active_for_splits=true
+    col.group_border_active=$ACT
+    col.group_border=$NRM
+    special_scale_factor=0.8
+    force_split=0
+    split_width_multiplier=1.0
 }
 
 misc {
@@ -118,8 +121,8 @@ windowrulev2=center,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
 windowrulev2=center,title:([pP]in|[pP]assword|[aA]uthentication)
 
 # idle inhibit
-#windowrulev2=idleinhibit fullscreen,class:^(firefox)$
-#windowrulev2=idleinhibit fullscreen,class:^(mpv)$
+windowrulev2=idleinhibit fullscreen,class:^(firefox)$
+windowrulev2=idleinhibit fullscreen,class:^(mpv)$
 
 ### KEYBINDS ###
 
