add themer script with pywall

--- a/configs/pc/hypr/theme.conf
+++ b/configs/pc/hypr/theme.conf
@@ -6,8 +6,8 @@
 #                              /____/_/
 
 # colors
-$FGD=0xffd890a8
-$BGD=0xff101840
-$NRM=0xff784858
-$ACT=0xffe0e0e8
+$FGD=0xffa2bbc2
+$BGD=0xff0f0d10
+$NRM=0xff485974
+$ACT=0xff718287
 $URG=0xffff0000
