wireplumber and pipewire updates

--- a/configs/combined/pipewire/pipewire-pulse.conf.d/pipewire-pulse.conf
+++ b/configs/combined/pipewire/pipewire-pulse.conf.d/pipewire-pulse.conf
@@ -1,22 +1,10 @@
 stream.properties = {
-    resample.quality      = 8
+    resample.quality = 10
 }
 
 pulse.properties = {
-    pulse.min.quantum      = 1024/48000     # 21ms
+    pulse.min.quantum = 1024/48000
     vm.overrides = {
-        pulse.min.quantum = 1024/48000      # 22ms
+        pulse.min.quantum = 1024/48000
     }
 }
-
-pulse.rules = [
-    {
-        {
-            matches = [ { application.process.binary = "Discord" } ]
-            actions = {
-            update-props = {
-                pulse.min.quantum      = 1024/48000     # 21ms
-            }
-        }
-    }
-]
