laptop and script updates

--- a/configs/laptop/hypr/theme.conf
+++ b/configs/laptop/hypr/theme.conf
@@ -5,8 +5,8 @@
 # /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
 #                              /____/_/
 
-$FGD=0xffd0d0b0
-$BGD=0xff181818
-$NRM=0xff404838
-$ACT=0xffe8d8b8
+$FGD=0xffe5e8e9
+$BGD=0xff1e0f16
+$NRM=0xff9f4e5d
+$ACT=0xffa0a2a3
 $URG=0xffff0000
