--- a/configs/laptop/hypr/hyprland.conf
+++ b/configs/laptop/hypr/hyprland.conf
@@ -19,12 +19,8 @@ $SCRIPT_PATH=/home/$USER/.config/scripts
 monitor=eDP-1,1920x1080@60,auto,1
 workspace=eDP-1,1
 
-# USB-C external monitor
-#monitor=DP-1,2560x1440@165,auto,1
-#workspace=DP-1,2
-
 # default
-monitor=,highrr,auto,1
+monitor=,highres,auto,1
 
 ### MAIN ###
 
@@ -40,6 +36,7 @@ input {
     accel_profile=flat
     force_no_accel=true
     natural_scroll=false
+    float_switch_override_focus=true
 }
 
 general {
@@ -50,22 +47,23 @@ general {
     col.inactive_border=$NRM
     apply_sens_to_raw=false
     sensitivity=1
-    damage_tracking=full
 }
 
 decoration {
     rounding=4
     blur=true
-    blur_size=3
-    blur_passes=2
-    blur_new_optimizations=1
+    blur_size=4
+    blur_passes=1
+    blur_new_optimizations=true
     drop_shadow=false
 }
 
 animations {
     enabled=true
-    animation=windows,1,4,default,popin
-    animation=workspaces,1,4,default,fade
+    use_resize_transitions=false
+    bezier=overshoot,0.05,0.9,0.05,1.05
+    animation=windows,1,4,overshoot,slide
+    animation=workspaces,1,4,overshoot,slide
     animation=border,1,4,default
     animation=fade,1,4,default
 }
@@ -73,11 +71,13 @@ animations {
 dwindle {
     pseudotile=false
     preserve_split=true
-    #special_scale_factor=0
-    force_split=false
-    #split_width_multiplier=0
     no_gaps_when_only=false
     use_active_for_splits=true
+    col.group_border_active=$ACT
+    col.group_border=$NRM
+    special_scale_factor=0.8
+    force_split=0
+    split_width_multiplier=1.0
 }
 
 gestures {
@@ -85,7 +85,7 @@ gestures {
 }
 
 misc {
-    no_vfr=true
+    no_vfr=false
     animate_manual_resizes=false
     mouse_move_enables_dpms=true
     enable_swallow=false
@@ -124,6 +124,11 @@ windowrulev2=center,class:^(thunar)$
 windowrulev2=center,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
 windowrulev2=center,title:([pP]in|[pP]assword|[aA]uthentication)
 
+# idleinhibit rules
+windowrulev2=idleinhibit fullscreen,class:^(firefox)$
+windowrulev2=idleinhibit fullscreen,class:^(WebCord)$
+windowrulev2=idleinhibit fullscreen,class:^(mpv)$
+
 ### KEYBINDS ###
 
 # app binds
@@ -137,6 +142,7 @@ bind=SUPER,L,exec,$WAY_SCRIPT_PATH/swaylock.sh
 
 # wm mod binds
 bind=SUPERSHIFT,C,killactive
+bind=SUPER,B,bringactivetotop
 bind=SUPERSHIFT,R,exec,hyprctl reload
 bind=SUPERSHIFT,F,togglefloating,
 bind=SUPERCTRL,F,fullscreen
@@ -160,13 +166,11 @@ bind=SUPER,2,workspace,2
 bind=SUPER,3,workspace,3
 bind=SUPER,4,workspace,4
 bind=SUPER,5,workspace,5
-bind=SUPER,6,workspace,6
-bind=SUPERSHIFT,1,movetoworkspace,1
-bind=SUPERSHIFT,2,movetoworkspace,2
-bind=SUPERSHIFT,3,movetoworkspace,3
-bind=SUPERSHIFT,4,movetoworkspace,4
-bind=SUPERSHIFT,5,movetoworkspace,5
-bind=SUPERSHIFT,6,movetoworkspace,6
+bind=SUPERSHIFT,1,movetoworkspacesilent,1
+bind=SUPERSHIFT,2,movetoworkspacesilent,2
+bind=SUPERSHIFT,3,movetoworkspacesilent,3
+bind=SUPERSHIFT,4,movetoworkspacesilent,4
+bind=SUPERSHIFT,5,movetoworkspacesilent,5
 
 # media keys
 bind=,XF86AudioLowerVolume,exec,$SCRIPT_PATH/volume.sh down
@@ -183,6 +187,8 @@ bind=,XF86MonBrightnessUp,exec,$SCRIPT_PATH/brightness.sh up
 # exec
 exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=hyprctl setcursor Neutral 4
+exec-once=/home/$USER/.config/hypr/xdg-portal.sh
+exec-once=hyprctl setcursor XCursor-Pro-Dark 4
 exec-once=/usr/lib/xfce-polkit/xfce-polkit
-exec=~/.config/hypr/autostart.sh
+exec-once=easyeffects --gapplication-service
+exec=/home/$USER/.config/hypr/autostart.sh
