add vscode settings file and other

--- a/configs/etc/pacman.conf
+++ b/configs/etc/pacman.conf
@@ -3,7 +3,7 @@
 [options]
 HoldPkg     = pacman glibc
 Architecture = auto
-IgnorePkg   = linux-xanmod-edge linux-xanmod-edge-headers 
+IgnorePkg   =
 IgnoreGroup =
 NoUpgrade   =
 NoExtract   =
@@ -17,7 +17,7 @@ VerbosePkgLists
 ParallelDownloads = 3
 SigLevel = Required DatabaseOptional
 LocalFileSigLevel = Optional
-#RemoteFileSigLevel = Required
+RemoteFileSigLevel = Required
 
 # REPOSITORIES
 
@@ -51,5 +51,5 @@ Include = /etc/pacman.d/mirrorlist
 [multilib]
 Include = /etc/pacman.d/mirrorlist
 
-[archstrike]
-Include = /etc/pacman.d/archstrike-mirrorlist
+#[archstrike]
+#Include = /etc/pacman.d/archstrike-mirrorlist
