--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -62,7 +62,6 @@ decoration {
 
 animations {
     enabled=true
-    use_resize_transitions=false
     bezier=overshoot,0.05,0.9,0.05,1.05
     animation=windows,1,4,overshoot,slide
     animation=workspaces,1,4,overshoot,slide
@@ -96,18 +95,14 @@ misc {
 windowrulev2=float,class:^([sS]ignal)$
 windowrulev2=float,class:^(org.telegram.desktop)$
 windowrulev2=float,class:(fstl-app)
-windowrulev2=float,class:(imv)
+windowrulev2=float,class:^(imv)$
 windowrulev2=float,class:^(mpv)$
 windowrulev2=float,class:^(org.pwmt.zathura)$
 windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
 windowrulev2=float,title:([pP]in|[pP]assword|[aA]uthentication)
 windowrulev2=float,title:^$
 
-# tile rules
-windowrulev2=tile,class:^(yubioath)
-
 # size rules
-windowrulev2=minsize 800 400,class:^(winbox.exe)$
 windowrulev2=minsize 400 200,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
 windowrulev2=maxsize 900 800,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
 
@@ -123,6 +118,7 @@ windowrulev2=center,title:([pP]in|[pP]assword|[aA]uthentication)
 # idle inhibit
 windowrulev2=idleinhibit fullscreen,class:^(firefox)$
 windowrulev2=idleinhibit fullscreen,class:^(mpv)$
+windowrulev2=idleinhibit fullscreen,class:^(WebCord)$
 
 ### KEYBINDS ###
 
