--- a/packages/packages.conf
+++ b/packages/packages.conf
@@ -144,6 +144,7 @@ BSC_FONTSTHEMES=(
     wqy-zenhei
     papirus-icon-theme
     xcursor-neutral
+    ttf-jetbrains-mono
 )
 
 BSC_FONTSTHEMES_AUR=(
