--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -38,7 +38,6 @@ input {
     accel_profile=flat
     force_no_accel=true
     natural_scroll=false
-    float_switch_override_focus=true
 }
 
 general {
@@ -77,13 +76,11 @@ dwindle {
     col.group_border_active=$ACT
     col.group_border=$NRM
     special_scale_factor=0.8
-    force_split=0
     split_width_multiplier=1.0
 }
 
 misc {
     no_vfr=true
-    animate_manual_resizes=false
     mouse_move_enables_dpms=true
     enable_swallow=false
     swallow_regex=^(kitty)$
@@ -101,10 +98,6 @@ windowrulev2=float,class:^(org.pwmt.zathura)$
 windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
 windowrulev2=float,title:([pP]in|[pP]assword|[aA]uthentication)
 windowrulev2=float,title:^$
-
-# size rules
-windowrulev2=minsize 400 200,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
-windowrulev2=maxsize 900 800,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
 
 # center rules
 windowrulev2=center,class:^(file-roller)$
@@ -175,8 +168,8 @@ bind=,XF86AudioPlay,exec,$SCRIPT_PATH/media.sh pp
 ### AUTOSTART ###
 
 # exec
-exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=/home/$USER/.config/hypr/xdg-portal.sh
 exec-once=hyprctl setcursor XCursor-Pro-Dark 4
 exec-once=/usr/lib/xfce-polkit/xfce-polkit
