script consistency and root handling + config updates

--- a/configs/combined/Code/User/settings.json
+++ b/configs/combined/Code/User/settings.json
@@ -27,5 +27,6 @@
     "rust-analyzer.inlayHints.renderColons": false,
     "rust-analyzer.inlayHints.typeHints.enable": false,
     "window.zoomLevel": 1,
-    "window.menuBarVisibility": "toggle"
+    "window.menuBarVisibility": "toggle",
+    "cmake.configureOnOpen": false
 }
