--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -109,9 +109,9 @@ windowrulev2=center,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
 windowrulev2=center,title:([pP]in|[pP]assword|[aA]uthentication)
 
 # idle inhibit
-windowrulev2=idleinhibit fullscreen,class:^(firefox)$
-windowrulev2=idleinhibit fullscreen,class:^(mpv)$
-windowrulev2=idleinhibit fullscreen,class:^(WebCord)$
+#windowrulev2=idleinhibit fullscreen,class:^(firefox)$
+#windowrulev2=idleinhibit fullscreen,class:^(mpv)$
+#windowrulev2=idleinhibit fullscreen,class:^(WebCord)$
 
 ### KEYBINDS ###
 
