--- a/configs/pc/hypr/theme.conf
+++ b/configs/pc/hypr/theme.conf
@@ -1,13 +1,5 @@
-#     __  ___________        __                     __                __
-#    / /_<  / __/ __ \      / /_  __  ______  _____/ /___ _____  ____/ /
-#   / //_/ / /_/ / / /_____/ __ \/ / / / __ \/ ___/ / __ `/ __ \/ __  /
-#  / ,< / / __/ /_/ /_____/ / / / /_/ / /_/ / /  / / /_/ / / / / /_/ /
-# /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
-#                              /____/_/
-
-# colors
-$FGD=0xffa2bbc2
-$BGD=0xff0f0d10
-$NRM=0xff485974
-$ACT=0xff718287
-$URG=0xffff0000
+$FGD=0xFFA2BBC2
+$BGD=0xFF0F0D10
+$NRM=0xFF485974
+$ACT=0xFF718287
+$URG=0xFFFF0000
