update sync and packages

--- a/packages/packages.conf
+++ b/packages/packages.conf
@@ -68,8 +68,6 @@ FUNC_MISC=(
     pam-u2f
     python-fido2
     pcsc-tools
-    clevis
-    libpwquality
 )
 
 DE_X=(
@@ -120,10 +118,12 @@ BSC_DE=(
     easyeffects
     zathura
     zathura-pdf-poppler
-    imv
+    nomacs
+    imagemagick
     mpv
     system-config-printer
     lxappearance
+    xdg-desktop-portal-gtk
     python-pywal
 )
 
@@ -167,13 +167,12 @@ BSC_MISC_AUR=(
     downgrade
     update-grub
     grub-hook
-    mkinitcpio-clevis-hook
 )
 
 EXT_DE=(
     signal-desktop
     gimp
-    yubioath-desktop
+    inkscape
     wireshark-qt
     mypaint
     gparted
@@ -181,7 +180,7 @@ EXT_DE=(
 
 EXT_DE_AUR=(
     ncspot-bin
-    discord-canary-electron-bin
+    webcord-bin
     visual-studio-code-bin
 )
 
