--- a/configs/laptop/hypr/hyprland.conf
+++ b/configs/laptop/hypr/hyprland.conf
@@ -84,7 +84,7 @@ gestures {
 }
 
 misc {
-    no_vfr=false
+    no_vfr=true
     animate_manual_resizes=false
     mouse_move_enables_dpms=true
     enable_swallow=false
@@ -97,15 +97,12 @@ misc {
 windowrulev2=float,class:^([sS]ignal)$
 windowrulev2=float,class:^(org.telegram.desktop)$
 windowrulev2=float,class:(fstl-app)
-windowrulev2=float,class:(imv)
+windowrulev2=float,class:(nomacs)
 windowrulev2=float,class:^(mpv)$
 windowrulev2=float,class:^(org.pwmt.zathura)$
 windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
 windowrulev2=float,title:([pP]in|[pP]assword|[aA]uthentication)
 windowrulev2=float,title:^$
-
-# size rules
-windowrulev2=minsize 800 400,class:^(winbox.exe)$
 
 # center rules
 windowrulev2=center,class:^(file-roller)$
@@ -116,10 +113,8 @@ windowrulev2=center,class:^(thunar)$
 windowrulev2=center,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
 windowrulev2=center,title:([pP]in|[pP]assword|[aA]uthentication)
 
-# idleinhibit rules
-windowrulev2=idleinhibit fullscreen,class:^(firefox)$
-windowrulev2=idleinhibit fullscreen,class:^(WebCord)$
-windowrulev2=idleinhibit fullscreen,class:^(mpv)$
+# idleinhibit rule for fullscreen
+windowrulev2=idleinhibit fullscreen,class:^$
 
 ### KEYBINDS ###
 
@@ -177,8 +172,8 @@ bind=,XF86MonBrightnessUp,exec,$SCRIPT_PATH/brightness.sh up
 ### AUTOSTART ###
 
 # exec
-exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=/home/$USER/.config/hypr/xdg-portal.sh
 exec-once=hyprctl setcursor XCursor-Pro-Dark 4
 exec-once=/usr/lib/xfce-polkit/xfce-polkit
