--- a/configs/laptop/hypr/theme.conf
+++ b/configs/laptop/hypr/theme.conf
@@ -5,8 +5,8 @@
 # /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
 #                              /____/_/
 
-$FGD=0xffebdfdf
-$BGD=0xff000000
-$NRM=0xff939393
-$ACT=0xffa49c9c
+$FGD=0xFF7DC9DF
+$BGD=0xFF000C1D
+$NRM=0xFF016599
+$ACT=0xFF578C9C
 $URG=0xffff0000
