--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -92,7 +92,7 @@ misc {
 windowrulev2=float,class:^([sS]ignal)$
 windowrulev2=float,class:^(org.telegram.desktop)$
 windowrulev2=float,class:(fstl-app)
-windowrulev2=float,class:^(imv)$
+windowrulev2=float,class:(nomacs)
 windowrulev2=float,class:^(mpv)$
 windowrulev2=float,class:^(org.pwmt.zathura)$
 windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
@@ -108,10 +108,8 @@ windowrulev2=center,class:^(thunar)$
 windowrulev2=center,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
 windowrulev2=center,title:([pP]in|[pP]assword|[aA]uthentication)
 
-# idle inhibit
-windowrulev2=idleinhibit fullscreen,class:^(firefox)$
-windowrulev2=idleinhibit fullscreen,class:^(mpv)$
-windowrulev2=idleinhibit fullscreen,class:^(WebCord)$
+# idleinhibit rule for fullscreen
+windowrulev2=idleinhibit fullscreen,class:^$
 
 ### KEYBINDS ###
 
