update themer and rofi

--- a/configs/pc/hypr/theme.conf
+++ b/configs/pc/hypr/theme.conf
@@ -1,5 +1,5 @@
-$FGD=0xFFA2BBC2
-$BGD=0xFF0F0D10
-$NRM=0xFF485974
-$ACT=0xFF718287
+$FGD=0xFFD3CCC5
+$BGD=0xFF0A100F
+$NRM=0xFF694738
+$ACT=0xFF938E89
 $URG=0xFFFF0000
