--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -95,8 +95,8 @@ windowrulev2=float,class:(fstl-app)
 windowrulev2=float,class:(nomacs)
 windowrulev2=float,class:^(mpv)$
 windowrulev2=float,class:^(org.pwmt.zathura)$
-windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
-windowrulev2=float,title:([pP]in|[pP]assword|[aA]uthentication)
+windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload|[fF]ile|[eE]xport|[iI]mport)
+windowrulev2=float,title:([pP]in|[pP]assword|[aA]uthentication|[fF]ile)
 windowrulev2=float,title:^$
 
 # center rules
@@ -105,11 +105,14 @@ windowrulev2=center,class:^(soffice)$
 windowrulev2=center,class:(desktop-portal)
 windowrulev2=center,class:^(firefox)$
 windowrulev2=center,class:^(thunar)$
-windowrulev2=center,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
+windowrulev2=center,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload|[fF]ile|[eE]xport|[iI]mport)
 windowrulev2=center,title:([pP]in|[pP]assword|[aA]uthentication)
 
+# minsize rules
+windowrulev2=minsize 600 400,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload|[fF]ile|[eE]xport|[iI]mport)
+
 # idleinhibit rule for fullscreen
-windowrulev2=idleinhibit fullscreen,class:^$
+windowrulev2=idleinhibit fullscreen,class:()
 
 ### KEYBINDS ###
 
