--- a/configs/pc/hypr/theme.conf
+++ b/configs/pc/hypr/theme.conf
@@ -1,3 +1,12 @@
+#     __  ___________        __                     __                __
+#    / /_<  / __/ __ \      / /_  __  ______  _____/ /___ _____  ____/ /
+#   / //_/ / /_/ / / /_____/ __ \/ / / / __ \/ ___/ / __ `/ __ \/ __  /
+#  / ,< / / __/ /_/ /_____/ / / / /_/ / /_/ / /  / / /_/ / / / / /_/ /
+# /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
+#                              /____/_/
+
+### COLORS ###
+
 $FGD=0xFFD3CCC5
 $BGD=0xFF0A100F
 $NRM=0xFF694738
