--- a/configs/pc/hypr/binds.conf
+++ b/configs/pc/hypr/binds.conf
@@ -57,9 +57,9 @@ bind=SUPERSHIFT,5,movetoworkspacesilent,5
 
 # media keys
 bind=,XF86Calculator,exec,rofi -show calc
-bind=,XF86AudioLowerVolume,exec,$SCRIPT_PATH/volume.sh down
-bind=,XF86AudioRaiseVolume,exec,$SCRIPT_PATH/volume.sh up
-bind=,XF86AudioMute,exec,$SCRIPT_PATH/volume.sh mute
+bind=,XF86AudioLowerVolume,exec,$SCRIPT_PATH/volume.sh sink-incr "-" "2"
+bind=,XF86AudioRaiseVolume,exec,$SCRIPT_PATH/volume.sh sink-incr "+" "2"
+bind=,XF86AudioMute,exec,$SCRIPT_PATH/volume.sh sink-mute
 bind=,XF86AudioNext,exec,$SCRIPT_PATH/media.sh next
 bind=,XF86AudioPrev,exec,$SCRIPT_PATH/media.sh prev
 bind=,XF86AudioPlay,exec,$SCRIPT_PATH/media.sh pp
