--- a/configs/pc/hypr/hyprland.conf
+++ b/configs/pc/hypr/hyprland.conf
@@ -54,7 +54,7 @@ general {
 }
 
 decoration {
-    rounding=4
+    rounding=8
     blur=true
     blur_size=4
     blur_passes=1
@@ -92,7 +92,7 @@ misc {
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=/home/$USER/.config/hypr/scripts/xdg-portal.sh
-exec-once=hyprctl setcursor XCursor-Pro-Dark 4
+exec-once=/home/$USER/.config/hypr/scripts/theme.sh
 exec-once=/usr/lib/xfce-polkit/xfce-polkit
 exec-once=easyeffects --gapplication-service
 exec=/home/$USER/.config/hypr/scripts/autostart.sh
