--- a/configs/pc/hypr/rules.conf
+++ b/configs/pc/hypr/rules.conf
@@ -7,28 +7,25 @@
 
 ### WINDOW RULES ###
 
-# float rules
+# general float rules
+windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload|[fF]ile|[eE]xport|[iI]mport)
+windowrulev2=float,title:([pP]in|[pP]assword|[aA]uthentication|[fF]ile)
+windowrulev2=float,title:^$
+
+# app specific float rules
 windowrulev2=float,class:^([sS]ignal)$
 windowrulev2=float,class:^(org.telegram.desktop)$
 windowrulev2=float,class:(fstl-app)
 windowrulev2=float,class:(nomacs)
 windowrulev2=float,class:^(mpv)$
 windowrulev2=float,class:^(org.pwmt.zathura)$
-windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload|[fF]ile|[eE]xport|[iI]mport)
-windowrulev2=float,title:([pP]in|[pP]assword|[aA]uthentication|[fF]ile)
-windowrulev2=float,title:^$
 
-# center rules
-windowrulev2=center,class:^(file-roller)$
-windowrulev2=center,class:^(soffice)$
-windowrulev2=center,class:(desktop-portal)
-windowrulev2=center,class:^(firefox)$
-windowrulev2=center,class:^(thunar)$
-windowrulev2=center,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload|[fF]ile|[eE]xport|[iI]mport)
-windowrulev2=center,title:([pP]in|[pP]assword|[aA]uthentication)
+# min/max size rule for all
+windowrulev2=minsize 300 200,class:()
+windowrulev2=maxsize 2560 1440,class:()
 
-# minsize rules
-windowrulev2=minsize 600 400,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload|[fF]ile|[eE]xport|[iI]mport)
+# center rule for all
+windowrulev2=center,class:()
 
 # idleinhibit rule for fullscreen
 windowrulev2=idleinhibit fullscreen,class:()
