--- a/configs/laptop/hypr/theme.conf
+++ b/configs/laptop/hypr/theme.conf
@@ -5,8 +5,10 @@
 # /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
 #                              /____/_/
 
-$FGD=0xFF7DC9DF
-$BGD=0xFF000C1D
-$NRM=0xFF016599
-$ACT=0xFF578C9C
-$URG=0xffff0000
+### COLORS ###
+
+$FGD=0xFF99ECDD
+$BGD=0xFF060A0E
+$NRM=0xFF41D8BE
+$ACT=0xFF6BA59A
+$URG=0xFFFF0000
