--- a/configs/laptop/hypr/hyprland.conf
+++ b/configs/laptop/hypr/hyprland.conf
@@ -9,9 +9,12 @@
 
 # theme file
 source=./theme.conf
-# script path
-$WAY_SCRIPT_PATH=/home/$USER/.config/scripts/wayland
-$SCRIPT_PATH=/home/$USER/.config/scripts
+
+# binds file
+source=./binds.conf
+
+# rules file
+source=./rules.conf
 
 ### INPUTS ###
 
@@ -50,7 +53,7 @@ general {
 }
 
 decoration {
-    rounding=4
+    rounding=8
     blur=true
     blur_size=4
     blur_passes=1
@@ -90,82 +93,6 @@ misc {
     enable_swallow=false
     swallow_regex=^(kitty)$
 }
-
-### WINDOW RULES ###
-
-# float rules
-windowrulev2=float,class:^([sS]ignal)$
-windowrulev2=float,class:^(org.telegram.desktop)$
-windowrulev2=float,class:(fstl-app)
-windowrulev2=float,class:(nomacs)
-windowrulev2=float,class:^(mpv)$
-windowrulev2=float,class:^(org.pwmt.zathura)$
-windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
-windowrulev2=float,title:([pP]in|[pP]assword|[aA]uthentication)
-windowrulev2=float,title:^$
-
-# center rules
-windowrulev2=center,class:^(file-roller)$
-windowrulev2=center,class:^(soffice)$
-windowrulev2=center,class:(desktop-portal)
-windowrulev2=center,class:^(firefox)$
-windowrulev2=center,class:^(thunar)$
-windowrulev2=center,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload)
-windowrulev2=center,title:([pP]in|[pP]assword|[aA]uthentication)
-
-# idleinhibit rule for fullscreen
-windowrulev2=idleinhibit fullscreen,class:^$
-
-### KEYBINDS ###
-
-# app binds
-bind=SUPER,Return,exec,kitty
-bind=SUPERSHIFT,Q,exec,$WAY_SCRIPT_PATH/ewwPower.sh
-bind=SUPER,Q,exec,thunar
-bind=SUPERSHIFT,S,exec,$WAY_SCRIPT_PATH/takeWayScreen.sh
-bind=SUPER,A,exec,rofi -show run
-bind=SUPERSHIFT,A,exec,rofi -show calc
-bind=SUPER,L,exec,$WAY_SCRIPT_PATH/swaylock.sh
-
-# wm mod binds
-bind=SUPERSHIFT,C,killactive
-bind=SUPER,B,bringactivetotop
-bind=SUPERSHIFT,R,exec,hyprctl reload
-bind=SUPERSHIFT,F,togglefloating,
-bind=SUPERCTRL,F,fullscreen
-bind=SUPERCTRL,S,workspaceopt,allfloat
-bindm=SUPER,mouse:272,movewindow
-bindm=SUPER,mouse:273,resizewindow
-
-# window and navigation binds
-bind=SUPER,left,movefocus,l
-bind=SUPER,right,movefocus,r
-bind=SUPER,up,movefocus,u
-bind=SUPER,down,movefocus,d
-bind=SUPERSHIFT,left,movewindow,l
-bind=SUPERSHIFT,right,movewindow,r
-bind=SUPERSHIFT,up,movewindow,u
-bind=SUPERSHIFT,down,movewindow,d
-bind=SUPERCTRL,right,movecurrentworkspacetomonitor,r
-bind=SUPERCTRL,left,movecurrentworkspacetomonitor,l
-bind=SUPER,1,workspace,1
-bind=SUPER,2,workspace,2
-bind=SUPER,3,workspace,3
-bind=SUPER,4,workspace,4
-bind=SUPER,5,workspace,5
-bind=SUPERSHIFT,1,movetoworkspacesilent,1
-bind=SUPERSHIFT,2,movetoworkspacesilent,2
-bind=SUPERSHIFT,3,movetoworkspacesilent,3
-bind=SUPERSHIFT,4,movetoworkspacesilent,4
-bind=SUPERSHIFT,5,movetoworkspacesilent,5
-
-# media keys
-bind=,XF86AudioLowerVolume,exec,$SCRIPT_PATH/volume.sh down
-bind=,XF86AudioRaiseVolume,exec,$SCRIPT_PATH/volume.sh up
-bind=,XF86AudioMute,exec,$SCRIPT_PATH/volume.sh mute
-bind=,XF86AudioNext,exec,$SCRIPT_PATH/media.sh next
-bind=,XF86AudioPrev,exec,$SCRIPT_PATH/media.sh prev
-bind=,XF86AudioPlay,exec,$SCRIPT_PATH/media.sh pp
 bind=,XF86MonBrightnessDown,exec,$SCRIPT_PATH/brightness.sh down
 bind=,XF86MonBrightnessUp,exec,$SCRIPT_PATH/brightness.sh up
 
@@ -174,8 +101,8 @@ bind=,XF86MonBrightnessUp,exec,$SCRIPT_PATH/brightness.sh up
 # exec
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=/home/$USER/.config/hypr/xdg-portal.sh
-exec-once=hyprctl setcursor XCursor-Pro-Dark 4
+exec-once=/home/$USER/.config/hypr/scripts/xdg-portal.sh
+exec-once=/home/$USER/.config/hypr/scripts/theme.sh
 exec-once=/usr/lib/xfce-polkit/xfce-polkit
 exec-once=easyeffects --gapplication-service
-exec=/home/$USER/.config/hypr/autostart.sh
+exec=/home/$USER/.config/hypr/scripts/autostart.sh
