--- a/configs/dotconfig/kitty/kitty.conf
+++ b/configs/dotconfig/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #                /____/
 
 # includes
-include ./theme.conf
+include ./colors.conf
 include ~/.cache/wal/colors-kitty.conf
 
 # fonts
