fix window rules

--- a/configs/dotconfig/hypr/rules.conf
+++ b/configs/dotconfig/hypr/rules.conf
@@ -8,8 +8,10 @@
 ### WINDOW RULES ###
 
 # general float rules
-windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress|[oO]pen|[uU]pload|[fF]ile|[eE]xport|[iI]mport)
-windowrulev2=float,title:([pP]in|[pP]assword|[aA]uthentication|[fF]ile)
+windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress)
+windowrulev2=float,title:([oO]pen|[uU]pload|[fF]ile|[eE]xport)
+windowrulev2=float,title:([iI]mport|[fF]ile|[dD]ownload)
+windowrulev2=float,title:([pP]in|[pP]assword|[aA]uthentication)
 windowrulev2=float,title:^$
 
 # app specific float rules
@@ -21,11 +23,14 @@ windowrulev2=float,class:^(mpv)$
 windowrulev2=float,class:^(org.pwmt.zathura)$
 
 # min/max size rule for all
-windowrulev2=minsize 300 200,class:()
+windowrulev2=minsize 250 150,class:()
 windowrulev2=maxsize 2560 1440,class:()
 
-# center rule for all
-windowrulev2=center,class:()
+# general center rules
+windowrulev2=center,title:([cC]ompress|[eE]xtract|[pP]rogress)
+windowrulev2=center,title:([oO]pen|[uU]pload|[fF]ile|[eE]xport)
+windowrulev2=center,title:([iI]mport|[fF]ile|[dD]ownload)
+windowrulev2=center,title:([pP]in|[pP]assword|[aA]uthentication)
 
 # idleinhibit rule for fullscreen
 windowrulev2=idleinhibit fullscreen,class:()
