--- a/configs/dotconfig/hypr/binds.conf
+++ b/configs/dotconfig/hypr/binds.conf
@@ -20,7 +20,7 @@ bind=SUPER,D,exec,eww open-many --toggle dashboard
 bind=SUPER,A,exec,rofi -show run
 bind=SUPER,L,exec,$WAY_SCRIPT_PATH/swaylock.sh
 bind=SUPERSHIFT,S,exec,$WAY_SCRIPT_PATH/takeWayScreen.sh
-bind=SUPERSHIFT,Q,exec,eww open-many --toggle powermenu-blur0 powermenu-blur1 powermenu
+bind=SUPERSHIFT,Q,exec,eww open-many --toggle powermenu-blur powermenu
 bind=SUPERSHIFT,A,exec,rofi -show calc
 
 # wm mod binds
