--- a/configs/dotconfig/hypr/rules.conf
+++ b/configs/dotconfig/hypr/rules.conf
@@ -23,7 +23,7 @@ windowrulev2=float,class:^(mpv)$
 windowrulev2=float,class:^(org.pwmt.zathura)$
 
 # min/max size rule for all
-windowrulev2=minsize 250 150,class:()
+windowrulev2=minsize 250 150,class:(),xwayland=0
 windowrulev2=maxsize 2560 1440,class:()
 
 # general center rules
@@ -31,6 +31,7 @@ windowrulev2=center,title:([cC]ompress|[eE]xtract|[pP]rogress)
 windowrulev2=center,title:([oO]pen|[uU]pload|[fF]ile|[eE]xport)
 windowrulev2=center,title:([iI]mport|[fF]ile|[dD]ownload)
 windowrulev2=center,title:([pP]in|[pP]assword|[aA]uthentication)
+windowrulev2=center,class:(),xwayland=0
 
 # idleinhibit rule for fullscreen
 windowrulev2=idleinhibit fullscreen,class:()
