add gtk settings, remove waybar and Code, add docs and fixes

--- a/configs/etc/pacman.conf
+++ b/configs/etc/pacman.conf
@@ -6,7 +6,7 @@ Architecture = auto
 IgnorePkg   =
 IgnoreGroup =
 NoUpgrade   =
-NoExtract   =
+NoExtract   = usr/lib/security/pam_systemd_home.so
 
 # MISC
 
