--- a/configs/dotconfig/hypr/hyprland.conf
+++ b/configs/dotconfig/hypr/hyprland.conf
@@ -78,10 +78,12 @@ misc {
 
 ### AUTOSTART ###
 
-exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+# system
+exec-once=systemctl --user import-environment DBUS_SESSION_BUS_ADDRESS DISPLAY WAYLAND_DISPLAY
+exec-once=dbus-update-activation-environment --systemd DBUS_SESSION_BUS_ADDRESS DISPLAY WAYLAND_DISPLAY
 exec-once=/home/$USER/.config/hypr/scripts/xdg-portal.sh
 exec-once=/home/$USER/.config/hypr/scripts/theme.sh
+# user specific
 exec-once=/usr/lib/xfce-polkit/xfce-polkit
 exec-once=easyeffects --gapplication-service
 exec=/home/$USER/.config/hypr/scripts/autostart.sh
