unify configs and base of user conf files

--- a/configs/dotconfig/hypr/example.conf
+++ b/configs/dotconfig/hypr/example.conf
@@ -7,8 +7,16 @@
 
 ### COLORS ###
 
-$FGD=0xFFD3CCC5
-$BGD=0xFF0A100F
-$NRM=0xFF694738
-$ACT=0xFF938E89
-$URG=0xFFFF0000
+$FGD=0xFF000000
+$BGD=0xFF000000
+$NRM=0xFF000000
+$ACT=0xFF000000
+$URG=0xFF000000
+
+### INPUTS ###
+
+monitor=,highrr,auto,1
+
+### IMPORTS ###
+
+source=./main.conf
