--- a/configs/dotconfig/hypr/main/main.conf
+++ b/configs/dotconfig/hypr/main/main.conf
@@ -7,10 +7,9 @@
 
 ### IMPORTS ###
 
-source=./colors.conf
-source=./monitors.conf
-source=./binds.conf
 source=./rules.conf
+source=./binds.conf
+source=./exec.conf
 
 ### MAIN ###
 
@@ -75,15 +74,3 @@ misc {
     enable_swallow=false
     swallow_regex=^(kitty)$
 }
-
-### AUTOSTART ###
-
-# system
-exec-once=systemctl --user import-environment DBUS_SESSION_BUS_ADDRESS DISPLAY WAYLAND_DISPLAY
-exec-once=dbus-update-activation-environment --systemd DBUS_SESSION_BUS_ADDRESS DISPLAY WAYLAND_DISPLAY
-exec-once=/home/$USER/.config/hypr/scripts/xdg-portal.sh
-exec-once=/home/$USER/.config/hypr/scripts/theme.sh
-# user specific
-exec-once=/usr/lib/xfce-polkit/xfce-polkit
-exec-once=easyeffects --gapplication-service
-exec=/home/$USER/.config/hypr/scripts/autostart.sh
